2005-07-23  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedString.java: API doc fixes,
	* java/text/ChoiceFormat.java: likewise,
	* java/text/CollationElementIterator.java: likewise,
	* java/text/CollationKey.java: likewise,
	* java/text/Collator.java: likewise,
	* java/text/DateFormat.java: likewise,
	* java/text/DateFormatSymbols.java: likewise,
	* java/text/DecimalFormatSymbols.java: likewise,
	* java/text/MessageFormat.java: likewise,
	* java/text/NumberFormat.java: likewise,
	* java/text/ParseException.java: likewise,
	* java/text/SimpleDateFormat.java: likewise,
	* java/text/StringCharacterIterator.java: likewise.

2005-07-23  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/ImageIcon.java: API doc fixes,
	* javax/swing/JLayeredPane.java: likewise,
	* javax/swing/JSplitPane.java: likewise,
	* javax/swing/JTree.java: likewise,
	* javax/swing/JViewport.java: likewise,
	* javax/swing/RepaintManager.java: likewise,
	* javax/swing/SizeRequirements.java: likewise,
	* javax/swing/SortingFocusTraversalPolicy.java.
	
2005-07-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/ServantLocatorOperations.java,
        org/omg/PortableServer/ServantActivatorOperations.java:
        Inherit from ServantManagerOperations.
        * org/omg/PortableServer/CurrentOperations.java:
        Inherit from org.omg.CORBA.CurrentOperations.
        org/omg/PortableServer/ForwardRequestHelper.java: New file.

2005-07-23  Sven de Marothy  <sven@physto.se>

	* java/awt/List.java (List): Initialize selected[] to an empty array.

2005-07-23  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * NEWS: Added entry about POA.

2005-07-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * org/omg/PortableServer/RequestProcessingPolicyOperations.java,
        org/omg/PortableServer/ServantRetentionPolicyOperations.java,
        org/omg/PortableServer/ThreadPolicyOperations.java,